assets/css/style.css
body {
	background-image: url("../images/old-moon-background.jpg");
	background-color: #eee;
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	color: #777;
	margin: 0;
	padding: 0;
}

header {
	background-color: #fff;
	border-color: #ccc;
	height: 65px;
	margin-bottom: 25px;
}

nav {
	height: 65px;
	margin-bottom: 25px;
	float: right;
}

h1 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: #fff;
	font-size: 2em;
}

h2 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: #4aaaa5;
	margin-bottom: 15px;
	font-size: 1.5em;
}

h3 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: #4aaaa5;
	margin-bottom: 15px;
	font-size: 1.25em;
}

footer {
	position: absolute;
	bottom: 0;
	left: 0;
	background-color: #666;
	border-top-style: solid;
	border-top-width: 5px;
	border-color: #4aaaa5;
	height: 65px;
	width: 100%;
	clear: both;
}

.header-box {
	position: relative;
	width: 960px;
	margin: 0 auto;
	border-bottom: 4px solid #ccc;
}

.name-box {
	display: inline-block;
	height: 65px;
	width: 275px;
	background-color: #4aaaa5;
	text-align: center;
	line-height: 65px;
	margin-left: 30px;
}

.nav-box {
	display: inline-block;
	height: 65px;
	margin-bottom: 25px;
	float: right;
	text-align: center;
	line-height: 65px;
}

.link {
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	color: #777;
	text-decoration: none;
	margin: 0 25px;
}

.container {
	width: 960px;
	margin: 0 auto;
}

.heading-box {
	margin-bottom: 15px;
}

.heading-line-h2 {
	border-bottom: 4px solid #ddd;
	width: 100%;
	margin-bottom: 30px;
}

.heading-line-h3 {
	border-bottom: 2px solid #ddd;
	width: 81%;
	margin-bottom: 30px;
	margin-left: 20px;
}

.main-content {
	width: 570px;
	margin-left: 30px;
	padding: 25px;
	background: #fff;
	line-height: 200%;
	float: left;
	border: 1px solid #ccc;
}

.sidebar {
	width: 200px;
	margin-left: 20px;
	text-align: center;
	background: #fff;
	float: left;
	padding: 20px 30px 0px 30px;
	border: 1px solid #ccc;
}

.social-box {
	margin: 30px 0 30px 5px;
}

.social-icon {
	align-items: center;
	max-width: 50px;
	max-height: 50px;
	text-decoration: none;
	margin: 0 2px;
}

.footer-container {
	text-align: center;
	line-height: 65px;
	color: #fff;
	margin-left: 30px;
}

#profile-photo {
	margin-right: 25px;
	float: left;
}

